// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunList handles no pipeline id given 1`] = `
<div>
  -
</div>
`;

exports[`RunList handles no pipeline name 1`] = `
<Link
  className="link"
  onClick={[Function]}
  replace={false}
  to="/pipelines/details/?fromRun=run-id"
>
  [View pipeline]
</Link>
`;

exports[`RunList in archived state renders the empty experience 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-142 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-157 MuiInputLabel-root-146 noMargin MuiInputLabel-formControl-151 MuiInputLabel-animated-154 MuiInputLabel-shrink-153 MuiInputLabel-outlined-156"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter runs
          </label>
          <div
            class="MuiInputBase-root-177 MuiOutlinedInput-root-164 noLeftPadding MuiInputBase-formControl-178 MuiInputBase-adornedStart-181 MuiOutlinedInput-adornedStart-167"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-194 MuiOutlinedInput-notchedOutline-171 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-195"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-196 MuiInputAdornment-positionEnd-199"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-201"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-187 MuiOutlinedInput-input-172 MuiInputBase-inputAdornedStart-192 MuiOutlinedInput-inputAdornedStart-175"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-226 MuiIconButton-root-220 MuiPrivateSwitchBase-root-216 MuiCheckbox-root-210 MuiCheckbox-colorPrimary-214"
          >
            <span
              class="MuiIconButton-label-225"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-201"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-219"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-266"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Run name"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Run name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 8.333333333333332%;"
          title="Status"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Status
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 8.333333333333332%;"
          title="Duration"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Duration
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 16.666666666666664%;"
          title="Experiment"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Experiment
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 16.666666666666664%;"
          title="Pipeline Version"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Pipeline Version
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 8.333333333333332%;"
          title="Recurring Run"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Recurring Run
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 16.666666666666664%;"
          title="Start time"
        >
          <span
            class="MuiButtonBase-root-226 MuiTableSortLabel-root-237 MuiTableSortLabel-active-238 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Start time
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201 MuiTableSortLabel-icon-239 MuiTableSortLabel-iconDirectionDesc-240"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-273 MuiCircularProgress-colorPrimary-276 MuiCircularProgress-indeterminate-275 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-278"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-279 MuiCircularProgress-circleIndeterminate-281"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-142 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-177 MuiInput-root-249 MuiInputBase-formControl-178 MuiInput-formControl-250"
          >
            <div
              class="MuiSelect-root-242"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-243 MuiSelect-selectMenu-246 MuiInputBase-input-187 MuiInput-input-257"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-201 MuiSelect-icon-248"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-226 MuiButtonBase-disabled-227 MuiIconButton-root-220 MuiIconButton-disabled-224"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-225"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-226 MuiIconButton-root-220"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-225"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-201"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-266"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RunList reloads the run when refresh is called 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="pageOverflowHidden"
        >
          <div>
            <div
              class="MuiFormControl-root-847 filterBox"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root-862 MuiInputLabel-root-851 noMargin MuiInputLabel-formControl-856 MuiInputLabel-animated-859 MuiInputLabel-shrink-858 MuiInputLabel-outlined-861"
                data-shrink="true"
                for="tableFilterBox"
              >
                Filter runs
              </label>
              <div
                class="MuiInputBase-root-882 MuiOutlinedInput-root-869 noLeftPadding MuiInputBase-formControl-883 MuiInputBase-adornedStart-886 MuiOutlinedInput-adornedStart-872"
              >
                <fieldset
                  aria-hidden="true"
                  class="MuiPrivateNotchedOutline-root-899 MuiOutlinedInput-notchedOutline-876 filterBorderRadius"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="MuiPrivateNotchedOutline-legend-900"
                    style="width: 0px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="MuiInputAdornment-root-901 MuiInputAdornment-positionEnd-904"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-906"
                    focusable="false"
                    role="presentation"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input-892 MuiOutlinedInput-input-877 MuiInputBase-inputAdornedStart-897 MuiOutlinedInput-inputAdornedStart-880"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="header"
          >
            <div
              class="columnName cell selectionToggle"
            >
              <span
                class="MuiButtonBase-root-931 MuiIconButton-root-925 MuiPrivateSwitchBase-root-921 MuiCheckbox-root-915 MuiCheckbox-colorPrimary-919"
              >
                <span
                  class="MuiIconButton-label-930"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-906"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-924"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-971"
                />
              </span>
            </div>
            <div
              class="columnName"
              style="width: 25%;"
              title="Run name"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Run name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 8.333333333333332%;"
              title="Status"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Status
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 8.333333333333332%;"
              title="Duration"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Duration
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 16.666666666666664%;"
              title="Experiment"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Experiment
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 16.666666666666664%;"
              title="Pipeline Version"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Pipeline Version
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 8.333333333333332%;"
              title="Recurring Run"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Recurring Run
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName"
              style="width: 16.666666666666664%;"
              title="Start time"
            >
              <span
                class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 MuiTableSortLabel-active-943 ellipsis"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Start time
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer"
            style="min-height: 60px;"
          >
            <div
              class="emptyMessage"
            >
              No available runs found.
            </div>
          </div>
          <div
            class="footer"
          >
            <span
              class=""
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root-847 verticalAlignInitial rowsPerPage"
            >
              <div
                class="MuiInputBase-root-882 MuiInput-root-954 MuiInputBase-formControl-883 MuiInput-formControl-955"
              >
                <div
                  class="MuiSelect-root-947"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    class="MuiSelect-select-948 MuiSelect-selectMenu-951 MuiInputBase-input-892 MuiInput-input-962"
                    role="button"
                    tabindex="0"
                  >
                    10
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-906 MuiSelect-icon-953"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root-931 MuiButtonBase-disabled-932 MuiIconButton-root-925 MuiIconButton-disabled-929"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-930"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root-931 MuiButtonBase-disabled-932 MuiIconButton-root-925 MuiIconButton-disabled-929"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-930"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="pageOverflowHidden"
      >
        <div>
          <div
            class="MuiFormControl-root-847 filterBox"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root-862 MuiInputLabel-root-851 noMargin MuiInputLabel-formControl-856 MuiInputLabel-animated-859 MuiInputLabel-shrink-858 MuiInputLabel-outlined-861"
              data-shrink="true"
              for="tableFilterBox"
            >
              Filter runs
            </label>
            <div
              class="MuiInputBase-root-882 MuiOutlinedInput-root-869 noLeftPadding MuiInputBase-formControl-883 MuiInputBase-adornedStart-886 MuiOutlinedInput-adornedStart-872"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-899 MuiOutlinedInput-notchedOutline-876 filterBorderRadius"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-900"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="MuiInputAdornment-root-901 MuiInputAdornment-positionEnd-904"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906"
                  focusable="false"
                  role="presentation"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-892 MuiOutlinedInput-input-877 MuiInputBase-inputAdornedStart-897 MuiOutlinedInput-inputAdornedStart-880"
                id="tableFilterBox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="header"
        >
          <div
            class="columnName cell selectionToggle"
          >
            <span
              class="MuiButtonBase-root-931 MuiIconButton-root-925 MuiPrivateSwitchBase-root-921 MuiCheckbox-root-915 MuiCheckbox-colorPrimary-919"
            >
              <span
                class="MuiIconButton-label-930"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-924"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
              </span>
              <span
                class="MuiTouchRipple-root-971"
              />
            </span>
          </div>
          <div
            class="columnName"
            style="width: 25%;"
            title="Run name"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Run name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Status"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Status
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Duration"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Duration
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Experiment"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Experiment
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Pipeline Version"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Pipeline Version
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Recurring Run"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Recurring Run
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Start time"
          >
            <span
              class="MuiButtonBase-root-931 MuiTableSortLabel-root-942 MuiTableSortLabel-active-943 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Start time
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906 MuiTableSortLabel-icon-944 MuiTableSortLabel-iconDirectionDesc-945"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer"
          style="min-height: 60px;"
        >
          <div
            class="emptyMessage"
          >
            No available runs found.
          </div>
        </div>
        <div
          class="footer"
        >
          <span
            class=""
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root-847 verticalAlignInitial rowsPerPage"
          >
            <div
              class="MuiInputBase-root-882 MuiInput-root-954 MuiInputBase-formControl-883 MuiInput-formControl-955"
            >
              <div
                class="MuiSelect-root-947"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  class="MuiSelect-select-948 MuiSelect-selectMenu-951 MuiInputBase-input-892 MuiInput-input-962"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  type="hidden"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-906 MuiSelect-icon-953"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root-931 MuiButtonBase-disabled-932 MuiIconButton-root-925 MuiIconButton-disabled-929"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-930"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root-931 MuiButtonBase-disabled-932 MuiIconButton-root-925 MuiIconButton-disabled-929"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-930"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-906"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RunList renders experiment name as link to its details page 1`] = `
<Link
  className="link"
  onClick={[Function]}
  replace={false}
  to="/experiments/details/experiment-id"
>
  test experiment
</Link>
`;

exports[`RunList renders no experiment name 1`] = `
<Link
  className="link"
  onClick={[Function]}
  replace={false}
  to="/experiments/details/experiment-id"
/>
`;

exports[`RunList renders pipeline name as link to its details page 1`] = `
<WithStyles(Tooltip)
  enterDelay={300}
  placement="top-start"
  title="test pipeline"
>
  <Link
    className="link"
    onClick={[Function]}
    replace={false}
    to="/pipelines/details/pipeline-id?"
  >
    test pipeline
  </Link>
</WithStyles(Tooltip)>
`;

exports[`RunList renders pipeline name as link to its details page 2`] = `
<Link
  className="link"
  onClick={[Function]}
  replace={false}
  to="/recurringrun/details/recurring-run-id"
>
  [View config]
</Link>
`;

exports[`RunList renders pipeline version name as link to its details page 1`] = `
<WithStyles(Tooltip)
  enterDelay={300}
  placement="top-start"
  title="test pipeline version"
>
  <Link
    className="link"
    onClick={[Function]}
    replace={false}
    to="/pipelines/details/pipeline-id/version/version-id?"
  >
    test pipeline version
  </Link>
</WithStyles(Tooltip)>
`;

exports[`RunList renders run name as link to its details page 1`] = `
<WithStyles(Tooltip)
  enterDelay={300}
  placement="top-start"
  title="test run"
>
  <Link
    className="link"
    onClick={[Function]}
    replace={false}
    to="/runs/details/run-id"
  >
    test run
  </Link>
</WithStyles(Tooltip)>
`;

exports[`RunList renders status as icon 1`] = `
<WithStyles(Tooltip)
  title={
    <div>
      <div>
        Executed successfully
      </div>
    </div>
  }
>
  <div>
    <pure(CheckCircleIcon)
      data-testid="node-status-sign"
      style={
        Object {
          "color": "#34a853",
          "height": 18,
          "width": 18,
        }
      }
    />
  </div>
</WithStyles(Tooltip)>
`;

exports[`RunList renders the empty experience 1`] = `
<div>
  <div>
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-1 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-16 MuiInputLabel-root-5 noMargin MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12 MuiInputLabel-outlined-15"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter runs
          </label>
          <div
            class="MuiInputBase-root-36 MuiOutlinedInput-root-23 noLeftPadding MuiInputBase-formControl-37 MuiInputBase-adornedStart-40 MuiOutlinedInput-adornedStart-26"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-53 MuiOutlinedInput-notchedOutline-30 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-54"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-55 MuiInputAdornment-positionEnd-58"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-46 MuiOutlinedInput-input-31 MuiInputBase-inputAdornedStart-51 MuiOutlinedInput-inputAdornedStart-34"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            class="MuiButtonBase-root-85 MuiIconButton-root-79 MuiPrivateSwitchBase-root-75 MuiCheckbox-root-69 MuiCheckbox-colorPrimary-73"
          >
            <span
              class="MuiIconButton-label-84"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
              <input
                class="MuiPrivateSwitchBase-input-78"
                data-indeterminate="false"
                type="checkbox"
                value=""
              />
            </span>
            <span
              class="MuiTouchRipple-root-125"
            />
          </span>
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Run name"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Run name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 8.333333333333332%;"
          title="Status"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Status
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 8.333333333333332%;"
          title="Duration"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Duration
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 16.666666666666664%;"
          title="Experiment"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Experiment
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 16.666666666666664%;"
          title="Pipeline Version"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Pipeline Version
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 8.333333333333332%;"
          title="Recurring Run"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Recurring Run
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 16.666666666666664%;"
          title="Start time"
        >
          <span
            class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 MuiTableSortLabel-active-97 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Start time
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-132 MuiCircularProgress-colorPrimary-135 MuiCircularProgress-indeterminate-134 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-137"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-138 MuiCircularProgress-circleIndeterminate-140"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-1 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-36 MuiInput-root-108 MuiInputBase-formControl-37 MuiInput-formControl-109"
          >
            <div
              class="MuiSelect-root-101"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-102 MuiSelect-selectMenu-105 MuiInputBase-input-46 MuiInput-input-116"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiSelect-icon-107"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiIconButton-root-79 MuiIconButton-disabled-83"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-84"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-85 MuiIconButton-root-79"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-84"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-60"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-125"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RunList shows "View pipeline" button if pipeline is embedded in run 1`] = `
<Link
  className="link"
  onClick={[Function]}
  replace={false}
  to="/pipelines/details/?fromRun=run-id"
>
  [View pipeline]
</Link>
`;
